[package]
name = "journalist"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
atom_syndication = "0.12.6"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
sqlite = "0.36.1"
tera = "1.20.0"
uuid = { version = "1.11.0", features = ["v3", "v4"] }
